--- a/NextStats/Views/Base.lproj/Main.storyboard
+++ b/NextStats/Views/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="FsU-Q3-fQG">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -333,24 +333,6 @@
             </objects>
             <point key="canvasLocation" x="2843" y="2129"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="7kb-Th-gYC">
-            <objects>
-                <navigationController storyboardIdentifier="MainNavigationController" automaticallyAdjustsScrollViewInsets="NO" id="FsU-Q3-fQG" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Aia-y4-Yyw">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="m5f-PP-Z14" kind="relationship" relationship="rootViewController" id="dty-sZ-Vkq"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="7F5-wL-BkA" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="42.399999999999999" y="-32.833583208395808"/>
-        </scene>
         <!--Detail Controller-->
         <scene sceneID="8Nz-Fs-ooq">
             <objects>
@@ -375,7 +357,7 @@
     </scenes>
     <resources>
         <image name="TypeChart" width="21" height="21"/>
-        <image name="TypeLocation" width="10" height="10"/>
+        <image name="TypeLocation" width="16" height="16"/>
         <image name="onepassword-button" width="27" height="27"/>
     </resources>
 </document>
